--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,26 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   </head>
 
   <body>
+  <nav class="navbar navbar-default">
+     <div class="container-fluid">
+     <div class="navbar-header navbar-brand navbar-link"><%= link_to 'Wikinimous', articles_path %>
+         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+       </div>
+       <div class="collapse navbar-collapse" id="navcol-1">
+         <ul class="nav navbar-nav navbar-right">
+           <li role="presentation">
+             <a href="#"> </a>
+           </li>
+           <li role="presentation"><%= link_to 'New!', new_article_path(@article) %></li>
+         </ul>
+       </div>
+     </div>
+   </nav>
     <%= yield %>
   </body>
 </html>
